Debug and minor changes.
